# plw

./: LICENSE  README.md
actix-leptos/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json
actix-leptos/src/: app.rs  lib.rs  main.rs  server.rs
terraform-azure/: .gitignore  README.md  main.tf  providers.tf  variables.tf
terraform-gcp/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  variables.tf
